# improv-website

./: # Technical Blueprint for a Voice-Driven.md  Dockerfile  README.md  docker-compose.yml
backend/: .env  .env.template  config.py  main.py  pyproject.toml  requirements.txt  start.py
backend/api/: routes_token.py
frontend/: Dockerfile.dev  index.html  package-lock.json  package.json  vite.config.ts
frontend/src/: App.css  App.tsx  types.ts
frontend/src/components/: SceneControls.css  SceneControls.tsx
frontend/src/hooks/: useImprovScene.ts
